Remove reconnect endpoint
